compilador.output
Terminais sem uso na gramática

   SLASH
   PONTO_PONTO
   FUNCTION


Estado 185 conflitos: 1 de deslocamento/redução


Gramática

    0 $accept: programa $end

    1 $@1: %empty

    2 programa: $@1 PROGRAM IDENT ABRE_PARENTESES lista_idents FECHA_PARENTESES PONTO_E_VIRGULA bloco PONTO

    3 $@2: %empty

    4 $@3: %empty

    5 bloco: parte_declara_rotulos_opt parte_declara_vars $@2 parte_declara_subrotinas_opt $@3 comando_composto

    6 parte_declara_rotulos_opt: %empty
    7                          | parte_declara_rotulos

    8 $@4: %empty

    9 parte_declara_rotulos: LABEL NUMERO $@4 parte_declara_rotulos_loop PONTO_E_VIRGULA

   10 parte_declara_rotulos_loop: %empty

   11 $@5: %empty

   12 parte_declara_rotulos_loop: VIRGULA NUMERO $@5 parte_declara_rotulos_loop

   13 parte_declara_vars: var

   14 $@6: %empty

   15 var: $@6 VAR declara_vars
   16    | %empty

   17 declara_vars: declara_var declara_vars
   18             | declara_var

   19 $@7: %empty

   20 declara_var: lista_idents DOIS_PONTOS tipo $@7 PONTO_E_VIRGULA

   21 tipo: IDENT

   22 $@8: %empty

   23 lista_idents: identificador $@8 lista_idents_lp

   24 lista_idents_lp: %empty

   25 $@9: %empty

   26 lista_idents_lp: VIRGULA identificador $@9 lista_idents_lp

   27 comando_composto: T_BEGIN comando comando_composto_loop T_END

   28 comando_composto_loop: %empty
   29                      | PONTO_E_VIRGULA comando comando_composto_loop

   30 $@10: %empty

   31 comando: NUMERO $@10 DOIS_PONTOS comando_sem_label
   32        | comando_sem_label

   33 comando_sem_label: %empty
   34                  | chamada_procedimento
   35                  | comando_composto
   36                  | comando_condicional
   37                  | comando_repetitivo
   38                  | comando_escrita
   39                  | comando_leitura
   40                  | atribuicao

   41 $@11: %empty

   42 $@12: %empty

   43 comando_condicional: IF expressao $@11 THEN comando_sem_label $@12 comando_condicional_else

   44 comando_condicional_else: %empty
   45                         | ELSE comando_sem_label

   46 $@13: %empty

   47 $@14: %empty

   48 comando_repetitivo: WHILE $@13 expressao $@14 DO comando_sem_label

   49 $@15: %empty

   50 comando_escrita: WRITE $@15 ABRE_PARENTESES lista_expressoes FECHA_PARENTESES

   51 comando_leitura: READ ABRE_PARENTESES comando_leitura_1 FECHA_PARENTESES

   52 $@16: %empty

   53 $@17: %empty

   54 comando_leitura_1: $@16 variavel $@17 comando_leitura_1_loop

   55 comando_leitura_1_loop: %empty
   56                       | VIRGULA comando_leitura_1

   57 $@18: %empty

   58 lista_expressoes: expressao $@18 lista_expressoes_loop

   59 lista_expressoes_loop: %empty

   60 $@19: %empty

   61 lista_expressoes_loop: VIRGULA expressao $@19 lista_expressoes_loop

   62 lista_expressoes_opt: %empty
   63                     | ABRE_PARENTESES lista_expressoes FECHA_PARENTESES

   64 expressao: expressao_simples
   65          | expressao_simples IGUAL expressao_simples
   66          | expressao_simples DIFERENTE expressao_simples
   67          | expressao_simples MENOR expressao_simples
   68          | expressao_simples MAIOR expressao_simples
   69          | expressao_simples MAIOR_IGUAL expressao_simples
   70          | expressao_simples MENOR_IGUAL expressao_simples

   71 expressao_simples: termo expressao_simples_loop
   72                  | MAIS termo expressao_simples_loop

   73 $@20: %empty

   74 expressao_simples: MENOS termo $@20 expressao_simples_loop

   75 expressao_simples_loop: %empty

   76 $@21: %empty

   77 expressao_simples_loop: MAIS termo $@21 expressao_simples_loop

   78 $@22: %empty

   79 expressao_simples_loop: MENOS termo $@22 expressao_simples_loop

   80 $@23: %empty

   81 expressao_simples_loop: OR termo $@23 expressao_simples_loop

   82 termo: fator termo_loop

   83 termo_loop: %empty

   84 $@24: %empty

   85 termo_loop: VEZES fator $@24 termo_loop

   86 $@25: %empty

   87 termo_loop: DIV fator $@25 termo_loop
   88           | AND fator

   89 fator: variavel
   90      | numero
   91      | ABRE_PARENTESES expressao FECHA_PARENTESES
   92      | NOT fator

   93 $@26: %empty

   94 atribuicao: variavel $@26 ATRIBUICAO expressao

   95 parte_declara_subrotinas_opt: %empty

   96 $@27: %empty

   97 parte_declara_subrotinas_opt: $@27 parte_declara_subrotinas

   98 parte_declara_subrotinas: declaracao_procedimento PONTO_E_VIRGULA parte_declara_subrotinas_loop
   99                         | declaracao_funcao PONTO_E_VIRGULA parte_declara_subrotinas_loop

  100 parte_declara_subrotinas_loop: %empty
  101                              | parte_declara_subrotinas

  102 $@28: %empty

  103 $@29: %empty

  104 declaracao_procedimento: PROCEDURE identificador $@28 parametros_formais_opt PONTO_E_VIRGULA $@29 bloco

  105 $@30: %empty

  106 chamada_procedimento: identificador $@30 lista_expressoes_opt

  107 declaracao_funcao: %empty

  108 parametros_formais_opt: %empty
  109                       | parametros_formais

  110 parametros_formais: ABRE_PARENTESES secao_parametros_formais parametros_formais_loop FECHA_PARENTESES

  111 parametros_formais_loop: %empty
  112                        | PONTO_E_VIRGULA secao_parametros_formais parametros_formais_loop

  113 $@31: %empty

  114 secao_parametros_formais: lista_idents $@31 DOIS_PONTOS tipo

  115 $@32: %empty

  116 secao_parametros_formais: VAR lista_idents $@32 DOIS_PONTOS tipo

  117 variavel: identificador

  118 identificador: IDENT

  119 numero: NUMERO


Terminais, com as regras onde eles aparecem

$end (0) 0
error (256)
PROGRAM (258) 2
ABRE_PARENTESES (259) 2 50 51 63 91 110
FECHA_PARENTESES (260) 2 50 51 63 91 110
VIRGULA (261) 12 26 56 61
PONTO_E_VIRGULA (262) 2 9 20 29 98 99 104 112
DOIS_PONTOS (263) 20 31 114 116
PONTO (264) 2
T_BEGIN (265) 27
T_END (266) 27
VAR (267) 15 116
IDENT (268) 2 21 118
ATRIBUICAO (269) 94
OR (270) 81
AND (271) 88
NOT (272) 92
MAIOR (273) 68
MENOR (274) 67
MAIOR_IGUAL (275) 69
MENOR_IGUAL (276) 70
IGUAL (277) 65
WRITE (278) 50
READ (279) 51
SLASH (280)
VEZES (281) 85
NUMERO (282) 9 12 31 119
MAIS (283) 72 77
MENOS (284) 74 79
PONTO_PONTO (285)
WHILE (286) 48
IF (287) 43
THEN (288) 43
ELSE (289) 45
DO (290) 48
DIV (291) 87
PROCEDURE (292) 104
FUNCTION (293)
LABEL (294) 9
DIFERENTE (295) 66


Não terminais com as regras onde eles aparecem

$accept (41)
    à esquerda: 0
programa (42)
    à esquerda: 2, à direita: 0
$@1 (43)
    à esquerda: 1, à direita: 2
bloco (44)
    à esquerda: 5, à direita: 2 104
$@2 (45)
    à esquerda: 3, à direita: 5
$@3 (46)
    à esquerda: 4, à direita: 5
parte_declara_rotulos_opt (47)
    à esquerda: 6 7, à direita: 5
parte_declara_rotulos (48)
    à esquerda: 9, à direita: 7
$@4 (49)
    à esquerda: 8, à direita: 9
parte_declara_rotulos_loop (50)
    à esquerda: 10 12, à direita: 9 12
$@5 (51)
    à esquerda: 11, à direita: 12
parte_declara_vars (52)
    à esquerda: 13, à direita: 5
var (53)
    à esquerda: 15 16, à direita: 13
$@6 (54)
    à esquerda: 14, à direita: 15
declara_vars (55)
    à esquerda: 17 18, à direita: 15 17
declara_var (56)
    à esquerda: 20, à direita: 17 18
$@7 (57)
    à esquerda: 19, à direita: 20
tipo (58)
    à esquerda: 21, à direita: 20 114 116
lista_idents (59)
    à esquerda: 23, à direita: 2 20 114 116
$@8 (60)
    à esquerda: 22, à direita: 23
lista_idents_lp (61)
    à esquerda: 24 26, à direita: 23 26
$@9 (62)
    à esquerda: 25, à direita: 26
comando_composto (63)
    à esquerda: 27, à direita: 5 35
comando_composto_loop (64)
    à esquerda: 28 29, à direita: 27 29
comando (65)
    à esquerda: 31 32, à direita: 27 29
$@10 (66)
    à esquerda: 30, à direita: 31
comando_sem_label (67)
    à esquerda: 33 34 35 36 37 38 39 40, à direita: 31 32 43 45 48
comando_condicional (68)
    à esquerda: 43, à direita: 36
$@11 (69)
    à esquerda: 41, à direita: 43
$@12 (70)
    à esquerda: 42, à direita: 43
comando_condicional_else (71)
    à esquerda: 44 45, à direita: 43
comando_repetitivo (72)
    à esquerda: 48, à direita: 37
$@13 (73)
    à esquerda: 46, à direita: 48
$@14 (74)
    à esquerda: 47, à direita: 48
comando_escrita (75)
    à esquerda: 50, à direita: 38
$@15 (76)
    à esquerda: 49, à direita: 50
comando_leitura (77)
    à esquerda: 51, à direita: 39
comando_leitura_1 (78)
    à esquerda: 54, à direita: 51 56
$@16 (79)
    à esquerda: 52, à direita: 54
$@17 (80)
    à esquerda: 53, à direita: 54
comando_leitura_1_loop (81)
    à esquerda: 55 56, à direita: 54
lista_expressoes (82)
    à esquerda: 58, à direita: 50 63
$@18 (83)
    à esquerda: 57, à direita: 58
lista_expressoes_loop (84)
    à esquerda: 59 61, à direita: 58 61
$@19 (85)
    à esquerda: 60, à direita: 61
lista_expressoes_opt (86)
    à esquerda: 62 63, à direita: 106
expressao (87)
    à esquerda: 64 65 66 67 68 69 70, à direita: 43 48 58 61 91 94
expressao_simples (88)
    à esquerda: 71 72 74, à direita: 64 65 66 67 68 69 70
$@20 (89)
    à esquerda: 73, à direita: 74
expressao_simples_loop (90)
    à esquerda: 75 77 79 81, à direita: 71 72 74 77 79 81
$@21 (91)
    à esquerda: 76, à direita: 77
$@22 (92)
    à esquerda: 78, à direita: 79
$@23 (93)
    à esquerda: 80, à direita: 81
termo (94)
    à esquerda: 82, à direita: 71 72 74 77 79 81
termo_loop (95)
    à esquerda: 83 85 87 88, à direita: 82 85 87
$@24 (96)
    à esquerda: 84, à direita: 85
$@25 (97)
    à esquerda: 86, à direita: 87
fator (98)
    à esquerda: 89 90 91 92, à direita: 82 85 87 88 92
atribuicao (99)
    à esquerda: 94, à direita: 40
$@26 (100)
    à esquerda: 93, à direita: 94
parte_declara_subrotinas_opt (101)
    à esquerda: 95 97, à direita: 5
$@27 (102)
    à esquerda: 96, à direita: 97
parte_declara_subrotinas (103)
    à esquerda: 98 99, à direita: 97 101
parte_declara_subrotinas_loop (104)
    à esquerda: 100 101, à direita: 98 99
declaracao_procedimento (105)
    à esquerda: 104, à direita: 98
$@28 (106)
    à esquerda: 102, à direita: 104
$@29 (107)
    à esquerda: 103, à direita: 104
chamada_procedimento (108)
    à esquerda: 106, à direita: 34
$@30 (109)
    à esquerda: 105, à direita: 106
declaracao_funcao (110)
    à esquerda: 107, à direita: 99
parametros_formais_opt (111)
    à esquerda: 108 109, à direita: 104
parametros_formais (112)
    à esquerda: 110, à direita: 109
parametros_formais_loop (113)
    à esquerda: 111 112, à direita: 110 112
secao_parametros_formais (114)
    à esquerda: 114 116, à direita: 110 112
$@31 (115)
    à esquerda: 113, à direita: 114
$@32 (116)
    à esquerda: 115, à direita: 116
variavel (117)
    à esquerda: 117, à direita: 54 89 94
identificador (118)
    à esquerda: 118, à direita: 23 26 104 106 117
numero (119)
    à esquerda: 119, à direita: 90


Estado 0

    0 $accept: . programa $end

    $padrão  reduzir usando a regra 1 ($@1)

    programa  ir ao estado 1
    $@1       ir ao estado 2


Estado 1

    0 $accept: programa . $end

    $end  deslocar, e ir ao estado 3


Estado 2

    2 programa: $@1 . PROGRAM IDENT ABRE_PARENTESES lista_idents FECHA_PARENTESES PONTO_E_VIRGULA bloco PONTO

    PROGRAM  deslocar, e ir ao estado 4


Estado 3

    0 $accept: programa $end .

    $padrão  aceitar


Estado 4

    2 programa: $@1 PROGRAM . IDENT ABRE_PARENTESES lista_idents FECHA_PARENTESES PONTO_E_VIRGULA bloco PONTO

    IDENT  deslocar, e ir ao estado 5


Estado 5

    2 programa: $@1 PROGRAM IDENT . ABRE_PARENTESES lista_idents FECHA_PARENTESES PONTO_E_VIRGULA bloco PONTO

    ABRE_PARENTESES  deslocar, e ir ao estado 6


Estado 6

    2 programa: $@1 PROGRAM IDENT ABRE_PARENTESES . lista_idents FECHA_PARENTESES PONTO_E_VIRGULA bloco PONTO

    IDENT  deslocar, e ir ao estado 7

    lista_idents   ir ao estado 8
    identificador  ir ao estado 9


Estado 7

  118 identificador: IDENT .

    $padrão  reduzir usando a regra 118 (identificador)


Estado 8

    2 programa: $@1 PROGRAM IDENT ABRE_PARENTESES lista_idents . FECHA_PARENTESES PONTO_E_VIRGULA bloco PONTO

    FECHA_PARENTESES  deslocar, e ir ao estado 10


Estado 9

   23 lista_idents: identificador . $@8 lista_idents_lp

    $padrão  reduzir usando a regra 22 ($@8)

    $@8  ir ao estado 11


Estado 10

    2 programa: $@1 PROGRAM IDENT ABRE_PARENTESES lista_idents FECHA_PARENTESES . PONTO_E_VIRGULA bloco PONTO

    PONTO_E_VIRGULA  deslocar, e ir ao estado 12


Estado 11

   23 lista_idents: identificador $@8 . lista_idents_lp

    VIRGULA  deslocar, e ir ao estado 13

    $padrão  reduzir usando a regra 24 (lista_idents_lp)

    lista_idents_lp  ir ao estado 14


Estado 12

    2 programa: $@1 PROGRAM IDENT ABRE_PARENTESES lista_idents FECHA_PARENTESES PONTO_E_VIRGULA . bloco PONTO

    LABEL  deslocar, e ir ao estado 15

    $padrão  reduzir usando a regra 6 (parte_declara_rotulos_opt)

    bloco                      ir ao estado 16
    parte_declara_rotulos_opt  ir ao estado 17
    parte_declara_rotulos      ir ao estado 18


Estado 13

   26 lista_idents_lp: VIRGULA . identificador $@9 lista_idents_lp

    IDENT  deslocar, e ir ao estado 7

    identificador  ir ao estado 19


Estado 14

   23 lista_idents: identificador $@8 lista_idents_lp .

    $padrão  reduzir usando a regra 23 (lista_idents)


Estado 15

    9 parte_declara_rotulos: LABEL . NUMERO $@4 parte_declara_rotulos_loop PONTO_E_VIRGULA

    NUMERO  deslocar, e ir ao estado 20


Estado 16

    2 programa: $@1 PROGRAM IDENT ABRE_PARENTESES lista_idents FECHA_PARENTESES PONTO_E_VIRGULA bloco . PONTO

    PONTO  deslocar, e ir ao estado 21


Estado 17

    5 bloco: parte_declara_rotulos_opt . parte_declara_vars $@2 parte_declara_subrotinas_opt $@3 comando_composto

    VAR       reduzir usando a regra 14 ($@6)
    $padrão  reduzir usando a regra 16 (var)

    parte_declara_vars  ir ao estado 22
    var                 ir ao estado 23
    $@6                 ir ao estado 24


Estado 18

    7 parte_declara_rotulos_opt: parte_declara_rotulos .

    $padrão  reduzir usando a regra 7 (parte_declara_rotulos_opt)


Estado 19

   26 lista_idents_lp: VIRGULA identificador . $@9 lista_idents_lp

    $padrão  reduzir usando a regra 25 ($@9)

    $@9  ir ao estado 25


Estado 20

    9 parte_declara_rotulos: LABEL NUMERO . $@4 parte_declara_rotulos_loop PONTO_E_VIRGULA

    $padrão  reduzir usando a regra 8 ($@4)

    $@4  ir ao estado 26


Estado 21

    2 programa: $@1 PROGRAM IDENT ABRE_PARENTESES lista_idents FECHA_PARENTESES PONTO_E_VIRGULA bloco PONTO .

    $padrão  reduzir usando a regra 2 (programa)


Estado 22

    5 bloco: parte_declara_rotulos_opt parte_declara_vars . $@2 parte_declara_subrotinas_opt $@3 comando_composto

    $padrão  reduzir usando a regra 3 ($@2)

    $@2  ir ao estado 27


Estado 23

   13 parte_declara_vars: var .

    $padrão  reduzir usando a regra 13 (parte_declara_vars)


Estado 24

   15 var: $@6 . VAR declara_vars

    VAR  deslocar, e ir ao estado 28


Estado 25

   26 lista_idents_lp: VIRGULA identificador $@9 . lista_idents_lp

    VIRGULA  deslocar, e ir ao estado 13

    $padrão  reduzir usando a regra 24 (lista_idents_lp)

    lista_idents_lp  ir ao estado 29


Estado 26

    9 parte_declara_rotulos: LABEL NUMERO $@4 . parte_declara_rotulos_loop PONTO_E_VIRGULA

    VIRGULA  deslocar, e ir ao estado 30

    $padrão  reduzir usando a regra 10 (parte_declara_rotulos_loop)

    parte_declara_rotulos_loop  ir ao estado 31


Estado 27

    5 bloco: parte_declara_rotulos_opt parte_declara_vars $@2 . parte_declara_subrotinas_opt $@3 comando_composto

    T_BEGIN   reduzir usando a regra 95 (parte_declara_subrotinas_opt)
    $padrão  reduzir usando a regra 96 ($@27)

    parte_declara_subrotinas_opt  ir ao estado 32
    $@27                          ir ao estado 33


Estado 28

   15 var: $@6 VAR . declara_vars

    IDENT  deslocar, e ir ao estado 7

    declara_vars   ir ao estado 34
    declara_var    ir ao estado 35
    lista_idents   ir ao estado 36
    identificador  ir ao estado 9


Estado 29

   26 lista_idents_lp: VIRGULA identificador $@9 lista_idents_lp .

    $padrão  reduzir usando a regra 26 (lista_idents_lp)


Estado 30

   12 parte_declara_rotulos_loop: VIRGULA . NUMERO $@5 parte_declara_rotulos_loop

    NUMERO  deslocar, e ir ao estado 37


Estado 31

    9 parte_declara_rotulos: LABEL NUMERO $@4 parte_declara_rotulos_loop . PONTO_E_VIRGULA

    PONTO_E_VIRGULA  deslocar, e ir ao estado 38


Estado 32

    5 bloco: parte_declara_rotulos_opt parte_declara_vars $@2 parte_declara_subrotinas_opt . $@3 comando_composto

    $padrão  reduzir usando a regra 4 ($@3)

    $@3  ir ao estado 39


Estado 33

   97 parte_declara_subrotinas_opt: $@27 . parte_declara_subrotinas

    PROCEDURE  deslocar, e ir ao estado 40

    $padrão  reduzir usando a regra 107 (declaracao_funcao)

    parte_declara_subrotinas  ir ao estado 41
    declaracao_procedimento   ir ao estado 42
    declaracao_funcao         ir ao estado 43


Estado 34

   15 var: $@6 VAR declara_vars .

    $padrão  reduzir usando a regra 15 (var)


Estado 35

   17 declara_vars: declara_var . declara_vars
   18             | declara_var .

    IDENT  deslocar, e ir ao estado 7

    $padrão  reduzir usando a regra 18 (declara_vars)

    declara_vars   ir ao estado 44
    declara_var    ir ao estado 35
    lista_idents   ir ao estado 36
    identificador  ir ao estado 9


Estado 36

   20 declara_var: lista_idents . DOIS_PONTOS tipo $@7 PONTO_E_VIRGULA

    DOIS_PONTOS  deslocar, e ir ao estado 45


Estado 37

   12 parte_declara_rotulos_loop: VIRGULA NUMERO . $@5 parte_declara_rotulos_loop

    $padrão  reduzir usando a regra 11 ($@5)

    $@5  ir ao estado 46


Estado 38

    9 parte_declara_rotulos: LABEL NUMERO $@4 parte_declara_rotulos_loop PONTO_E_VIRGULA .

    $padrão  reduzir usando a regra 9 (parte_declara_rotulos)


Estado 39

    5 bloco: parte_declara_rotulos_opt parte_declara_vars $@2 parte_declara_subrotinas_opt $@3 . comando_composto

    T_BEGIN  deslocar, e ir ao estado 47

    comando_composto  ir ao estado 48


Estado 40

  104 declaracao_procedimento: PROCEDURE . identificador $@28 parametros_formais_opt PONTO_E_VIRGULA $@29 bloco

    IDENT  deslocar, e ir ao estado 7

    identificador  ir ao estado 49


Estado 41

   97 parte_declara_subrotinas_opt: $@27 parte_declara_subrotinas .

    $padrão  reduzir usando a regra 97 (parte_declara_subrotinas_opt)


Estado 42

   98 parte_declara_subrotinas: declaracao_procedimento . PONTO_E_VIRGULA parte_declara_subrotinas_loop

    PONTO_E_VIRGULA  deslocar, e ir ao estado 50


Estado 43

   99 parte_declara_subrotinas: declaracao_funcao . PONTO_E_VIRGULA parte_declara_subrotinas_loop

    PONTO_E_VIRGULA  deslocar, e ir ao estado 51


Estado 44

   17 declara_vars: declara_var declara_vars .

    $padrão  reduzir usando a regra 17 (declara_vars)


Estado 45

   20 declara_var: lista_idents DOIS_PONTOS . tipo $@7 PONTO_E_VIRGULA

    IDENT  deslocar, e ir ao estado 52

    tipo  ir ao estado 53


Estado 46

   12 parte_declara_rotulos_loop: VIRGULA NUMERO $@5 . parte_declara_rotulos_loop

    VIRGULA  deslocar, e ir ao estado 30

    $padrão  reduzir usando a regra 10 (parte_declara_rotulos_loop)

    parte_declara_rotulos_loop  ir ao estado 54


Estado 47

   27 comando_composto: T_BEGIN . comando comando_composto_loop T_END

    T_BEGIN  deslocar, e ir ao estado 47
    IDENT    deslocar, e ir ao estado 7
    WRITE    deslocar, e ir ao estado 55
    READ     deslocar, e ir ao estado 56
    NUMERO   deslocar, e ir ao estado 57
    WHILE    deslocar, e ir ao estado 58
    IF       deslocar, e ir ao estado 59

    $padrão  reduzir usando a regra 33 (comando_sem_label)

    comando_composto      ir ao estado 60
    comando               ir ao estado 61
    comando_sem_label     ir ao estado 62
    comando_condicional   ir ao estado 63
    comando_repetitivo    ir ao estado 64
    comando_escrita       ir ao estado 65
    comando_leitura       ir ao estado 66
    atribuicao            ir ao estado 67
    chamada_procedimento  ir ao estado 68
    variavel              ir ao estado 69
    identificador         ir ao estado 70


Estado 48

    5 bloco: parte_declara_rotulos_opt parte_declara_vars $@2 parte_declara_subrotinas_opt $@3 comando_composto .

    $padrão  reduzir usando a regra 5 (bloco)


Estado 49

  104 declaracao_procedimento: PROCEDURE identificador . $@28 parametros_formais_opt PONTO_E_VIRGULA $@29 bloco

    $padrão  reduzir usando a regra 102 ($@28)

    $@28  ir ao estado 71


Estado 50

   98 parte_declara_subrotinas: declaracao_procedimento PONTO_E_VIRGULA . parte_declara_subrotinas_loop

    PROCEDURE  deslocar, e ir ao estado 40

    PONTO_E_VIRGULA  reduzir usando a regra 107 (declaracao_funcao)
    $padrão         reduzir usando a regra 100 (parte_declara_subrotinas_loop)

    parte_declara_subrotinas       ir ao estado 72
    parte_declara_subrotinas_loop  ir ao estado 73
    declaracao_procedimento        ir ao estado 42
    declaracao_funcao              ir ao estado 43


Estado 51

   99 parte_declara_subrotinas: declaracao_funcao PONTO_E_VIRGULA . parte_declara_subrotinas_loop

    PROCEDURE  deslocar, e ir ao estado 40

    PONTO_E_VIRGULA  reduzir usando a regra 107 (declaracao_funcao)
    $padrão         reduzir usando a regra 100 (parte_declara_subrotinas_loop)

    parte_declara_subrotinas       ir ao estado 72
    parte_declara_subrotinas_loop  ir ao estado 74
    declaracao_procedimento        ir ao estado 42
    declaracao_funcao              ir ao estado 43


Estado 52

   21 tipo: IDENT .

    $padrão  reduzir usando a regra 21 (tipo)


Estado 53

   20 declara_var: lista_idents DOIS_PONTOS tipo . $@7 PONTO_E_VIRGULA

    $padrão  reduzir usando a regra 19 ($@7)

    $@7  ir ao estado 75


Estado 54

   12 parte_declara_rotulos_loop: VIRGULA NUMERO $@5 parte_declara_rotulos_loop .

    $padrão  reduzir usando a regra 12 (parte_declara_rotulos_loop)


Estado 55

   50 comando_escrita: WRITE . $@15 ABRE_PARENTESES lista_expressoes FECHA_PARENTESES

    $padrão  reduzir usando a regra 49 ($@15)

    $@15  ir ao estado 76


Estado 56

   51 comando_leitura: READ . ABRE_PARENTESES comando_leitura_1 FECHA_PARENTESES

    ABRE_PARENTESES  deslocar, e ir ao estado 77


Estado 57

   31 comando: NUMERO . $@10 DOIS_PONTOS comando_sem_label

    $padrão  reduzir usando a regra 30 ($@10)

    $@10  ir ao estado 78


Estado 58

   48 comando_repetitivo: WHILE . $@13 expressao $@14 DO comando_sem_label

    $padrão  reduzir usando a regra 46 ($@13)

    $@13  ir ao estado 79


Estado 59

   43 comando_condicional: IF . expressao $@11 THEN comando_sem_label $@12 comando_condicional_else

    ABRE_PARENTESES  deslocar, e ir ao estado 80
    IDENT            deslocar, e ir ao estado 7
    NOT              deslocar, e ir ao estado 81
    NUMERO           deslocar, e ir ao estado 82
    MAIS             deslocar, e ir ao estado 83
    MENOS            deslocar, e ir ao estado 84

    expressao          ir ao estado 85
    expressao_simples  ir ao estado 86
    termo              ir ao estado 87
    fator              ir ao estado 88
    variavel           ir ao estado 89
    identificador      ir ao estado 90
    numero             ir ao estado 91


Estado 60

   35 comando_sem_label: comando_composto .

    $padrão  reduzir usando a regra 35 (comando_sem_label)


Estado 61

   27 comando_composto: T_BEGIN comando . comando_composto_loop T_END

    PONTO_E_VIRGULA  deslocar, e ir ao estado 92

    $padrão  reduzir usando a regra 28 (comando_composto_loop)

    comando_composto_loop  ir ao estado 93


Estado 62

   32 comando: comando_sem_label .

    $padrão  reduzir usando a regra 32 (comando)


Estado 63

   36 comando_sem_label: comando_condicional .

    $padrão  reduzir usando a regra 36 (comando_sem_label)


Estado 64

   37 comando_sem_label: comando_repetitivo .

    $padrão  reduzir usando a regra 37 (comando_sem_label)


Estado 65

   38 comando_sem_label: comando_escrita .

    $padrão  reduzir usando a regra 38 (comando_sem_label)


Estado 66

   39 comando_sem_label: comando_leitura .

    $padrão  reduzir usando a regra 39 (comando_sem_label)


Estado 67

   40 comando_sem_label: atribuicao .

    $padrão  reduzir usando a regra 40 (comando_sem_label)


Estado 68

   34 comando_sem_label: chamada_procedimento .

    $padrão  reduzir usando a regra 34 (comando_sem_label)


Estado 69

   94 atribuicao: variavel . $@26 ATRIBUICAO expressao

    $padrão  reduzir usando a regra 93 ($@26)

    $@26  ir ao estado 94


Estado 70

  106 chamada_procedimento: identificador . $@30 lista_expressoes_opt
  117 variavel: identificador .

    ATRIBUICAO  reduzir usando a regra 117 (variavel)
    $padrão    reduzir usando a regra 105 ($@30)

    $@30  ir ao estado 95


Estado 71

  104 declaracao_procedimento: PROCEDURE identificador $@28 . parametros_formais_opt PONTO_E_VIRGULA $@29 bloco

    ABRE_PARENTESES  deslocar, e ir ao estado 96

    $padrão  reduzir usando a regra 108 (parametros_formais_opt)

    parametros_formais_opt  ir ao estado 97
    parametros_formais      ir ao estado 98


Estado 72

  101 parte_declara_subrotinas_loop: parte_declara_subrotinas .

    $padrão  reduzir usando a regra 101 (parte_declara_subrotinas_loop)


Estado 73

   98 parte_declara_subrotinas: declaracao_procedimento PONTO_E_VIRGULA parte_declara_subrotinas_loop .

    $padrão  reduzir usando a regra 98 (parte_declara_subrotinas)


Estado 74

   99 parte_declara_subrotinas: declaracao_funcao PONTO_E_VIRGULA parte_declara_subrotinas_loop .

    $padrão  reduzir usando a regra 99 (parte_declara_subrotinas)


Estado 75

   20 declara_var: lista_idents DOIS_PONTOS tipo $@7 . PONTO_E_VIRGULA

    PONTO_E_VIRGULA  deslocar, e ir ao estado 99


Estado 76

   50 comando_escrita: WRITE $@15 . ABRE_PARENTESES lista_expressoes FECHA_PARENTESES

    ABRE_PARENTESES  deslocar, e ir ao estado 100


Estado 77

   51 comando_leitura: READ ABRE_PARENTESES . comando_leitura_1 FECHA_PARENTESES

    $padrão  reduzir usando a regra 52 ($@16)

    comando_leitura_1  ir ao estado 101
    $@16               ir ao estado 102


Estado 78

   31 comando: NUMERO $@10 . DOIS_PONTOS comando_sem_label

    DOIS_PONTOS  deslocar, e ir ao estado 103


Estado 79

   48 comando_repetitivo: WHILE $@13 . expressao $@14 DO comando_sem_label

    ABRE_PARENTESES  deslocar, e ir ao estado 80
    IDENT            deslocar, e ir ao estado 7
    NOT              deslocar, e ir ao estado 81
    NUMERO           deslocar, e ir ao estado 82
    MAIS             deslocar, e ir ao estado 83
    MENOS            deslocar, e ir ao estado 84

    expressao          ir ao estado 104
    expressao_simples  ir ao estado 86
    termo              ir ao estado 87
    fator              ir ao estado 88
    variavel           ir ao estado 89
    identificador      ir ao estado 90
    numero             ir ao estado 91


Estado 80

   91 fator: ABRE_PARENTESES . expressao FECHA_PARENTESES

    ABRE_PARENTESES  deslocar, e ir ao estado 80
    IDENT            deslocar, e ir ao estado 7
    NOT              deslocar, e ir ao estado 81
    NUMERO           deslocar, e ir ao estado 82
    MAIS             deslocar, e ir ao estado 83
    MENOS            deslocar, e ir ao estado 84

    expressao          ir ao estado 105
    expressao_simples  ir ao estado 86
    termo              ir ao estado 87
    fator              ir ao estado 88
    variavel           ir ao estado 89
    identificador      ir ao estado 90
    numero             ir ao estado 91


Estado 81

   92 fator: NOT . fator

    ABRE_PARENTESES  deslocar, e ir ao estado 80
    IDENT            deslocar, e ir ao estado 7
    NOT              deslocar, e ir ao estado 81
    NUMERO           deslocar, e ir ao estado 82

    fator          ir ao estado 106
    variavel       ir ao estado 89
    identificador  ir ao estado 90
    numero         ir ao estado 91


Estado 82

  119 numero: NUMERO .

    $padrão  reduzir usando a regra 119 (numero)


Estado 83

   72 expressao_simples: MAIS . termo expressao_simples_loop

    ABRE_PARENTESES  deslocar, e ir ao estado 80
    IDENT            deslocar, e ir ao estado 7
    NOT              deslocar, e ir ao estado 81
    NUMERO           deslocar, e ir ao estado 82

    termo          ir ao estado 107
    fator          ir ao estado 88
    variavel       ir ao estado 89
    identificador  ir ao estado 90
    numero         ir ao estado 91


Estado 84

   74 expressao_simples: MENOS . termo $@20 expressao_simples_loop

    ABRE_PARENTESES  deslocar, e ir ao estado 80
    IDENT            deslocar, e ir ao estado 7
    NOT              deslocar, e ir ao estado 81
    NUMERO           deslocar, e ir ao estado 82

    termo          ir ao estado 108
    fator          ir ao estado 88
    variavel       ir ao estado 89
    identificador  ir ao estado 90
    numero         ir ao estado 91


Estado 85

   43 comando_condicional: IF expressao . $@11 THEN comando_sem_label $@12 comando_condicional_else

    $padrão  reduzir usando a regra 41 ($@11)

    $@11  ir ao estado 109


Estado 86

   64 expressao: expressao_simples .
   65          | expressao_simples . IGUAL expressao_simples
   66          | expressao_simples . DIFERENTE expressao_simples
   67          | expressao_simples . MENOR expressao_simples
   68          | expressao_simples . MAIOR expressao_simples
   69          | expressao_simples . MAIOR_IGUAL expressao_simples
   70          | expressao_simples . MENOR_IGUAL expressao_simples
